# Atlas-AI-Operating-System

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
atlas/: __init__.py  main.py
atlas/agents/: .gitkeep  __init__.py  base.py  collaboration.py  live.py
atlas/app/: __init__.py  _qt.py  bootstrap.py  main_window.py
atlas/business/: __init__.py  analytics.py  automation.py  calendar.py  communications.py  crm.py  customers.py  dashboard.py  decision.py  finance.py  marketing.py  meetings.py  models.py  orchestrator.py  projects.py  revenue.py  sales.py  seo.py  social.py
atlas/collaboration/: __init__.py  artifacts.py  conflict.py  consensus.py  conversation.py  coordination.py  delegation.py  handoff.py  memory.py  models.py  negotiation.py  orchestrator.py  patterns.py  session.py
atlas/configs/: atlas.yaml  connectors.yaml
atlas/core/: Identity.md  Principles.md  __init__.py  atlas.py  config.py  context.py  kernel.py  logger.py  planner.py  router.py  session.py  state.py
atlas/creator_pipeline/: __init__.py  assets.py  models.py  orchestrator.py  planner.py  publisher.py  render.py  research.py  review.py  script.py  storyboard.py  timeline.py  voice.py
atlas/dashboard/: __init__.py  app.py  collector.py
atlas/enterprise/: __init__.py  approval.py  automation.py  compliance.py  dashboard.py  departments.py  forecast.py  models.py  optimization.py  orchestrator.py  processes.py  rules.py
atlas/evaluation/: __init__.py  benchmark.py  dashboard.py  models.py  optimizer.py  orchestrator.py  regression.py  runner.py  scenarios.py  scoring.py
atlas/execution/: __init__.py  dispatcher.py  engine.py  executor.py  models.py  planner.py  reporter.py  reviewer.py  strategy.py
atlas/integration/: __init__.py  bootstrap.py  container.py  dependency.py  diagnostics.py  health.py  orchestrator.py  registry.py  service_locator.py  shutdown.py  startup.py  wiring.py
atlas/intelligence/: __init__.py  brain.py  coordinator.py  (+9 more)
docs/: .gitkeep  business.md  creator_pipeline.md  enterprise.md  evaluation.md  execution_engine.md  integration_layer.md  intelligence_layer.md  live_runtime.md  mcp_layer.md  real_connectors.md  runtime_engine.md  studio.md
examples/: launch_atlas.py  run_pipeline.py
tests/: .gitkeep  test_agents.py  test_agents_live.py  test_app.py  test_atlas.py  test_business.py  test_collaboration.py  test_creator_pipeline.py  test_dashboard.py  test_enterprise.py  test_evaluation.py  test_execution.py  test_integration.py  test_intelligence.py  test_kernel.py  test_knowledge.py  test_live.py  test_mcp.py  test_memory.py  test_pipeline.py  test_providers.py  test_real_connectors.py  test_runtime.py  test_studio.py  test_tools.py  test_workflows.py  test_workforce.py
(+192 files in other folders)
