[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-ai-operating-system"
version = "0.1.0"
description = "Atlas AI Operating System — a structured framework for persistent, governed AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Moses Augustine" },
]
keywords = ["ai", "operating-system", "agent", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "ruff>=0.5",
]

[project.scripts]
atlas = "atlas.main:main"

[project.urls]
Homepage = "https://github.com/MosesAugustine10/Atlas-AI-Operating-System"
Repository = "https://github.com/MosesAugustine10/Atlas-AI-Operating-System"
Issues = "https://github.com/MosesAugustine10/Atlas-AI-Operating-System/issues"

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["atlas*"]

[tool.setuptools.package-data]
atlas = ["configs/*.yaml"]

# ---------------------------------------------------------------------------
# Black — code formatting
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff — linting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E402", "F811", "B017", "E741", "F841"]
"atlas/workforce/learning.py" = ["E741"]
"atlas/workforce/__init__.py" = ["F401"]
"atlas/collaboration/*" = ["E501", "F841"]
"atlas/creator_pipeline/*" = ["E501", "F841", "F821"]
"atlas/evaluation/*" = ["E501"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
